	had been created based on an existing S3 generic.

    o	The check for consistent ordering of superclasses was not
        ignoring all conditional relations (the symptom was usually
        spurious warnings for classes extending "array").

    o   Assigning into a raw vector with an index vector containing NA
        could cause a segfault.  Reported by Hervé Pagès.



	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.2 patched


NEW FEATURES

    o	On systems using ICU for collation (including Mac OS X), using
 	Sys.setlocale() to change the LC_COLLATE setting is more
 	likely to change the collation provided by ICU.


BUG FIXES

    o	Names of datasets could clash with temporary filenames used
	when running examples, causing errors.

    o	as.complex() sometimes warned about NAs on coercions and
	sometimes not (when the C function asComplex was used, e.g. on
	list elements).  (PR#13942)

    o	cat() on an unopened connection could close it twice, and
	file() connections segfaulted on some systems.
	
    o	Printing a list could segfault if the elements are nested too
	deeply.



		CHANGES IN R VERSION 2.9.2


NEW FEATURES

    o	install.packages(NULL) now lists packages only once even if they
	occur in more than one repository (as the latest compatible
	version of those available will always be downloaded).

    o	approxfun() and approx() now accept a 'rule' of length two, for
	easy specification of different interpolation rules on left and
	right.

	They no longer segfault for invalid zero-length specification
	of 'yleft, 'yright', or 'f'.

    o	seq_along(x) is now equivalent to seq_len(length(x)) even where
	length() has an S3/S4 method; previously it (intentionally)
	always used the default method for length().

    o	PCRE has been updated to version 7.9 (for bug fixes).
